<resources>
    <string name="app_name">GithubUserApp</string>
    <string name="id_profile_users">ID: %s</string>
    <string name="follower">Followers</string>
    <string name="following">Following</string>
    <string name="username">Username</string>
    <string name="nama">Nama</string>
    <string name="idProfile">ID: </string>
    <string name="dark_mode">Dark Mode</string>
    <string name="_5">5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cari_username">Cari Username</string>
</resources>